@@ -1,62 +1,6 @@
-import random
+def print_dashes(x):
+    dash = '-'
+    border = dash * x
+    print(border)
 
-
-#-----------------------------------------------#
-#                CLASS BOSSBATTLE               #
-#-----------------------------------------------#
-
-
-
-#-----------------------------------------------#
-#             CLASS  BATTLEMANAGER              #
-#-----------------------------------------------#
-
-
-
-#-----------------------------------------------#
-#                 CLASS CHARACTER               #
-#-----------------------------------------------#
-
-
-
-#-----------------------------------------------#
-#                CLASS PLAYER                   #
-#-----------------------------------------------#
-
-
-
-
-#-----------------------------------------------#
-#                CLASS  ENEMY                   #
-#-----------------------------------------------#
-
-
-
-
-#-----------------------------------------------#
-#                 CLASS GAME                    #
-#-----------------------------------------------#
-
-
-
-#-----------------------------------------------#
-#               CLASS GAMELOOP                  #
-#-----------------------------------------------#
-
-
-
-
-
-
-
-
-
-#-----------------------------------------------#
-#             CLASS   WORLDSTATES               #
-#-----------------------------------------------#
-
-
-
-
-
-
+print_dashes(100)
