@@ -8,4 +8,6 @@ Version 1.5 Release Notes:
 
 TODO:
 
-1. up-to-date :3
+- user enters name for no reason
+- add dashes for better visibility
+- 
